--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>org.exist-db</groupId>
   <artifactId>exist-documentation</artifactId>
-  <version>5.4.1-SNAPSHOT</version>
+  <version>6.1.0-SNAPSHOT</version>
 
   <name>eXist-db Documentation</name>
   <description>Documentation package for eXist-db</description>
@@ -48,7 +48,7 @@
     <project.build.source>1.8</project.build.source>
     <project.build.target>1.8</project.build.target>
 
-    <exist.version>5.4.0</exist.version>
+    <exist.version>${project.version}</exist.version>
     <templating.version>1.1.0</templating.version>
     <node.version>v14.17.6</node.version>
     <npm.version>7.24.0</npm.version>
